--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,7 +57,7 @@
         {% endif %}
 
         {% if site.mailchimp_url and page.class == 'tag-template' %}
-        {% include newsletter-box.html %}
+        {% include convertkit-box.html %}
         {% endif %}
 
         <footer id="colophon" class="site-footer outer">
