--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -49,7 +49,7 @@ post_class: post-template
             {% include disqus.html %}
         </article>
         {% if site.mailchimp_url %}
-        {% include newsletter-box.html %}
+        {% include convertkit-box.html %}
         {% endif %}
         <section class="read-next inner">
             <h2 class="read-next-title">Read Next</h2>
