--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -16,7 +16,7 @@ layout: default
             </div>
         </article>
         {% if site.mailchimp_url %}
-        {% include newsletter-box.html %}
+        {% include convertkit-box.html %}
         {% endif %}
     </main>
 </div>
